[package]
name = "single_executor"
version = "0.4.1"
authors = ["buzzec <buzzec@buzzec.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Traits for concurrent primitives."
homepage = "https://github.com/Buzzec/single_executor"
repository = "https://github.com/Buzzec/single_executor"
readme = "README.md"
keywords = ["multithread"]
exclude = [
    ".idea/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrency_traits = { version = "0.7.0", default-features = false, features = ["alloc"] }
simple_futures = { version = "0.1.2", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["concurrency_traits/std", "simple_futures/std"]
nightly = ["concurrency_traits/nightly"]
